# sync-bot

./: .gitignore  BUILD.md  DEBUG_GUIDE.md  FORCE_PUSH_INSTRUCTIONS.md  GITHUB_RELEASE.md  QUICK_START.md  README.md  RELEASE.md  RELEASE_NOTES_v2.0.0.md  TESTING_INSTRUCTIONS.md  clean-build.sh  create-release.sh  package.json  refresh-icon.sh  view-logs.sh
logs/: README.md
releases/: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icon.py  create_icon.sh
src-tauri/src/: commands.rs  config.rs  drive_sync.rs  file_tracker.rs  logger.rs  main.rs  scheduler.rs  version_manager.rs
