[package]
name = "sync-bot"
version = "1.0.0"
description = "Lightweight Google Drive sync application"
authors = ["vishnu"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
sha2 = "0.10"
rusqlite = { version = "0.30", features = ["bundled"] }
zip = "0.6"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
base64 = "0.21"
rand = "0.8"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
